--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+
+    <!-- font -->
+    <link href="https://fonts.cdnfonts.com/css/fira-mono" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/nanumgothic-2" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/nanumgothiccoding" rel="stylesheet">
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
